hphp/hack/test/ifc/check/shape_get.php.exp
=== IFC analysis results for shape_get.php
File "shape_get.php", line 26, characters 5-20:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "shape_get.php", line 9, characters 43-73:
  This may be the data source with policy `A`
  File "shape_get.php", line 12, characters 43-73:
  This may be the data sink with policy `B`
  File "shape_get.php", line 24, characters 7-20:
  Another program point contributing to the illegal flow
File "shape_get.php", line 39, characters 3-26:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "shape_get.php", line 12, characters 43-73:
  This may be the data source with policy `B`
  File "shape_get.php", line 9, characters 43-73:
  This may be the data sink with policy `A`
